# mhai-web

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .prettierignore  .releaserc.json  .sugar.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.envs/: .django.tpl  .env.tpl
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yaml
conda/: dev.yaml  production.yaml
containers/: compose.base.yaml  compose.dev.yaml  compose.docs.yaml  compose.local.yaml  compose.prod.yaml  compose.production.yaml  docker-compose.local.yml
containers/.envs/.local/: .django  .env  .postgres
containers/.envs/.production/: .django  .postgres
containers/django/dev/: Dockerfile
containers/django/prod/: Dockerfile  start
containers/django/production/: Dockerfile
containers/django/scripts/: activate.sh  (+2 more)
containers/nginx/: Dockerfile
containers/traefik/: traefik.yml
docs/: __init__.py  conf.py  contributing.md  devops.md  howto.rst  index.md  index.rst  make.bat  users.rst
requirements/: local.txt  production.txt
scripts/: conda-activate.sh
src/: manage.py
src/backend/: conftest.py  manage.py
src/frontend/: package-lock.json  package.json  webpack.config.js
src/libs/: __init__.py
src/libs/mhailib/: README.md  pyproject.toml
src/libs/mhailib/messages/: ai_answer.py  config.py  db.py  evaluations.py  generations.py
src/libs/mhailib/src/mhailib/: __init__.py  core.py
src/libs/mhailib/src/mhailib/messages/: __init__.py  ai_answer.py  config.py  db.py  evaluations.py
tests/data/: counsel-chat.pkl  result.pkl
(+184 files in other folders)
