[tool.poetry]
name = "mhailib"
version = "0.1.0"
description = ""
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
readme = "README.md"
packages = [
  {include = "mhailib", from="src"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.12.*"
celery = "^5.4.0"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
openai = "^1.30.1"
torch = {version = "^2.3.0+cpu", source = "pytorch-cpu-src"}
pandas = "^2.2.2"
joblib = ">=1.4.2"
tiktoken = "^0.7.0"
djangorestframework-stubs = "^3.15.1"


[tool.poetry.group.dev.dependencies]
makim = "1.19.0"
ruff = "^0.6.8"
mypy = "^1.11.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.0"}
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.9.19"
coverage = "^7.6.1"
djlint = "^1.35.2"
pre-commit = "^3.8.0"
factory-boy = "^3.3.1"
pytest-django = "^4.9.0"
mccabe = "^0.7.0"
vulture = "^2.12"
bandit = "^1.7.10"
pytest-cov = ">=5"
